helm_charts/grafana/grafana/ingress_route_grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  annotations:
    helm.sh/hook: "post-install, post-upgrade"
  namespace: prometheus  
  labels:
    app: traefik  
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.justpipeline.com`)
    kind: Rule
    services:
      - name: grafana
        port: 80
